--- a/peacecorps/peacecorps/static/peacecorps/resources/styleguide/section-base.html
+++ b/peacecorps/peacecorps/static/peacecorps/resources/styleguide/section-base.html
@@ -131,7 +131,8 @@ by theme and are used extensively elsewhere.</p>
 
       <div class="kss-description">
         <p>Blurbs are large pieces of readable (not uppercased) text that call out
-bits of important information.</p>
+bits of important information.
+Font Family: Archer Medium</p>
 
       </div>
     </div>
@@ -150,7 +151,7 @@ bits of important information.</p>
           .t-blurb--lg
         </div>
         <div class="kss-modifier__description kss-style">
-          Largest blurb style.
+          36px Largest blurb style.
         </div>
         <div class="kss-modifier__example">
           <h2 class="t-blurb--lg">A blurb of text about something</p>
@@ -159,7 +160,7 @@ bits of important information.</p>
           .t-blurb--md
         </div>
         <div class="kss-modifier__description kss-style">
-          Middle blurb style, for most use cases.
+          26px Middle blurb style, for most use cases.
         </div>
         <div class="kss-modifier__example">
           <h2 class="t-blurb--md">A blurb of text about something</p>
@@ -184,7 +185,9 @@ bits of important information.</p>
 
 
       <div class="kss-description">
-        <p>Body text, purposed for readibilty of large amounts of content.</p>
+        <p>Body text, purposed for readibilty of large amounts of content.
+Font family: Lato Light
+Leading: 1.8 of font size</p>
 
       </div>
     </div>
@@ -203,7 +206,7 @@ bits of important information.</p>
           .t-body--lg
         </div>
         <div class="kss-modifier__description kss-style">
-          Largest set of type, used for full-page articles of content.
+          18px Largest set of type, used for full-page articles of content.
         </div>
         <div class="kss-modifier__example">
           <p class="t-body--lg">The Heading</p>
@@ -212,7 +215,7 @@ bits of important information.</p>
           .t-body--md
         </div>
         <div class="kss-modifier__description kss-style">
-          Standard set of body type, used in most places across site.
+          16px Standard set of body type, used in most places across site.
         </div>
         <div class="kss-modifier__example">
           <p class="t-body--md">The Heading</p>
@@ -221,7 +224,7 @@ bits of important information.</p>
           .t-body--sm
         </div>
         <div class="kss-modifier__description kss-style">
-          Small set of type for when things have to be smaller then body, used as links in the footer amoung other things.
+          14px Small set of type for when things have to be smaller then body, used as links in the footer amoung other things.
         </div>
         <div class="kss-modifier__example">
           <p class="t-body--sm">The Heading</p>
@@ -255,7 +258,9 @@ bits of important information.</p>
 
 
       <div class="kss-description">
-        <p>Headings are in the main content, serving as titles to body text.</p>
+        <p>Headings are in the main content, serving as titles to body text.
+Font Family: Archer Medium
+Leading: 1.3 of font size</p>
 
       </div>
     </div>
@@ -274,7 +279,7 @@ bits of important information.</p>
           .t-heading--1
         </div>
         <div class="kss-modifier__description kss-style">
-          First and largest heading size.
+          27px , First and largest heading size.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-heading--1">The Heading</h1>
@@ -283,7 +288,7 @@ bits of important information.</p>
           .t-heading--2
         </div>
         <div class="kss-modifier__description kss-style">
-          Heading 2.
+          24px Heading 2.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-heading--2">The Heading</h1>
@@ -292,7 +297,7 @@ bits of important information.</p>
           .t-heading--3
         </div>
         <div class="kss-modifier__description kss-style">
-          Heading 3.
+          21px Heading 3.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-heading--3">The Heading</h1>
@@ -301,7 +306,7 @@ bits of important information.</p>
           .t-heading--4
         </div>
         <div class="kss-modifier__description kss-style">
-          Heading 4.
+          18px Heading 4.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-heading--4">The Heading</h1>
@@ -335,7 +340,7 @@ bits of important information.</p>
 
 
       <div class="kss-description">
-        <p>Icon is for text that goes along with an icon</p>
+        <p>Icon is for text that goes along with an icon, 10.5px.</p>
 
       </div>
     </div>
@@ -420,7 +425,8 @@ bits of important information.</p>
 
 
       <div class="kss-description">
-        <p>Single-nav are single navigational elements, such as links to more content.</p>
+        <p>Single-nav are single navigational elements, such as links to more content,
+11px.</p>
 
       </div>
     </div>
@@ -453,7 +459,9 @@ bits of important information.</p>
 
       <div class="kss-description">
         <p>Title styles are for titles not associated with content. They are differently
-styled the headings.</p>
+styled the headings.
+Font Family: Lato Regular(medium)
+Leading: 1.6 of font size</p>
 
       </div>
     </div>
@@ -472,7 +480,7 @@ styled the headings.</p>
           .t-title--1
         </div>
         <div class="kss-modifier__description kss-style">
-          Largest title size, title 1.
+          23px Largest title size, title 1.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-title--1">The Title</h1>
@@ -481,7 +489,7 @@ styled the headings.</p>
           .t-title--2
         </div>
         <div class="kss-modifier__description kss-style">
-          Title 2.
+          16px Title 2.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-title--2">The Title</h1>
@@ -490,7 +498,7 @@ styled the headings.</p>
           .t-title--3
         </div>
         <div class="kss-modifier__description kss-style">
-          Title 3.
+          13px Title 3.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-title--3">The Title</h1>
@@ -499,7 +507,7 @@ styled the headings.</p>
           .t-title--4
         </div>
         <div class="kss-modifier__description kss-style">
-          Title 4.
+          11px Title 4.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-title--4">The Title</h1>
@@ -508,7 +516,7 @@ styled the headings.</p>
           .t-title--5
         </div>
         <div class="kss-modifier__description kss-style">
-          Title 5.
+          9px Title 5.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-title--5">The Title</h1>
@@ -517,7 +525,7 @@ styled the headings.</p>
           .t-title--6
         </div>
         <div class="kss-modifier__description kss-style">
-          Title 6.
+          7px Title 6.
         </div>
         <div class="kss-modifier__example">
           <h1 class="t-title--6">The Title</h1>
